add entity in editor

--- a/views/editor.jade
+++ b/views/editor.jade
@@ -6,9 +6,13 @@ block body
   div(ng-controller='EditorCtrl')
     .container
       .drag(ng-repeat='entity in shared_document.entities', nt-draggable) 
+    
+    button(ng-click="addEntity()") + 
+    
     p(ng-repeat="con in shared_document.connections") 
       {{shared_document.entities[con.from].title}} -> 
       {{shared_document.entities[con.to].title}}
+
 
 
     form(ng-submit="addconn()")
