--- a/public/css/app.css
+++ b/public/css/app.css
@@ -23,6 +23,16 @@
 	width: 50px; height: 50px; padding: 0.5em; background-color: #AAAA77;    
             position: absolute; 
 }
+.draggable.selected1 {
+  border-color: #FFAA77;
+  border-style:solid;
+  border-width:2px;
+}
+.draggable.selected2 {
+  border-color: #DDAA77;
+  border-style:solid;
+  border-width:2px;
+}
 
 .container {
 	width: 600px; height: 400px; background-color: #CCCCCC;
