--- a/views/layout.jade
+++ b/views/layout.jade
@@ -8,5 +8,8 @@ html(ng-app="myApp")
   body
    block header
      a(href="/editor") Editor 
+     &#58;&#58;
+     a(href="/playground") Playground 
+     &#58;&#58;
      a(href="/") Main 
    block body
