--- a/views/editor.jade
+++ b/views/editor.jade
@@ -19,9 +19,12 @@ block body
     
     
   
-  script(src='http://code.jquery.com/jquery-1.9.1.min.js')
-  script(src="http://code.jquery.com/ui/1.10.1/jquery-ui.js")
-  script(src="http://jsplumbtoolkit.com/js/jquery.jsPlumb-1.5.2-min.js")
+  //script(src='http://code.jquery.com/jquery-1.9.1.min.js')
+  script(src='js/lib/jquery-1.9.1.min.js')
+  //script(src="http://code.jquery.com/ui/1.10.1/jquery-ui.js")
+  script(src="js/lib/jquery-ui.js")
+  //script(src="http://jsplumbtoolkit.com/js/jquery.jsPlumb-1.5.2-min.js")
+  script(src="js/lib/jquery.jsPlumb-1.5.2-min.js")
   //script(src='https://ajax.googleapis.com/ajax/libs/angularjs/1.0.8/angular.min.js')
   script(src='js/lib/angular/angular.min.js')
   script(src='js/lib/angular/angular-resource.js')
