--- a/public/css/app.css
+++ b/public/css/app.css
@@ -25,6 +25,9 @@ body{
     /* Monospace stack */
     font-family: Consolas, "Andale Mono WT", "Andale Mono", "Lucida Console", "Lucida Sans Typewriter", "DejaVu Sans Mono", "Bitstream Vera Sans Mono", "Liberation Mono", "Nimbus Mono L", Monaco, "Courier New", Courier, monospace;
 }
+.hashholder2 {
+    margin: 2px;
+}
 .hashholder {
     margin: 30px;
     position: fixed;
@@ -115,8 +118,11 @@ a {
 ._jsPlumb_overlay{
     z-index: 110;
 }
-
+#templateholder{
+    margin: 10px;
+}
 #templateholder textarea{
+    margin: 10px;
     width: 40%;
     height:400px;
 
