--- a/views/layout.jade
+++ b/views/layout.jade
@@ -7,10 +7,11 @@ html(ng-app="myApp")
     link(rel='stylesheet', href='/css/app.css')
   body
    block header
-    .header
+    //.header
      a(href="/") Main 
      &nbsp;&nbsp;&nbsp;
      a(href="/playground") ApiPlayground 
      &nbsp;&nbsp;&nbsp;
-     a(href="/editor") Editor 
+     a(href="/editor") Editor
+
    block body
