move marks out of entity model

--- a/views/editor.jade
+++ b/views/editor.jade
@@ -63,6 +63,7 @@ block body
   //script(src="http://jsplumbtoolkit.com/js/jquery.jsPlumb-1.5.2-min.js")
   script(src="js/lib/jquery.jsPlumb-1.5.2-min.js")
   //script(src='https://ajax.googleapis.com/ajax/libs/angularjs/1.0.8/angular.min.js')
+  script(src='js/lib/underscore.js')
   script(src='js/lib/angular/angular.min.js')
   script(src='js/lib/angular/angular-resource.js')
   script(src='/socket.io/socket.io.js')
