--- a/views/editor.jade
+++ b/views/editor.jade
@@ -68,7 +68,8 @@ block body
   script(src='js/lib/angular/angular-resource.js')
   script(src='/socket.io/socket.io.js')
   script(src='js/app.js')
-  script(src='js/services.js')
+  script(src='js/services/services.js')
+  script(src='js/services/plumbService.js')
   //script(src="http://www.webtoolkit.info/djs/webtoolkit.md5.js")
   script(src="js/lib/webtoolkit.md5.js")
 
