--- a/views/editor.jade
+++ b/views/editor.jade
@@ -65,7 +65,7 @@ block body
   script(src="js/lib/jquery.jsPlumb-1.5.2-min.js")
   //script(src='https://ajax.googleapis.com/ajax/libs/angularjs/1.0.8/angular.min.js')
   script(src='js/lib/underscore.js')
-  script(src='js/lib/angular/angular.min.js')
+  script(src='js/lib/angular/angular.js')
   script(src='js/lib/angular/angular-resource.js')
   script(src='/socket.io/socket.io.js')
   script(src='js/app.js')
